Creado mediante Colaboratory

--- a/AlgoritmosBusqueda/02_BusquedaBinaria.ipynb
+++ b/AlgoritmosBusqueda/02_BusquedaBinaria.ipynb
@@ -50,15 +50,15 @@
         "id": "T5lrtG35TPHg"
       },
       "source": [
-        "##**Introducción**\n",
+        "# Introducción\n",
         "\n",
-        "Para este algoritmo vamos a pensarlo de forma adelantada a un tema de análsis numérico. Imaginemos que queremos encontrar la raíz de una función $f(x)$ en el rango $[a,b]$.\n",
+        "Para este algoritmo vamos a pensarlo de forma adelantada a un tema de análisis numérico. Imaginemos que queremos encontrar la raíz de una función $f(x)$ en el intervalo $[a,b]$.\n",
         "\n",
         "<center>\n",
         "<img src=\"https://github.com/jugernaut/Numerico2021/blob/master/Figuras/raicesNumericas/esqbis.PNG?raw=1\" width=\"700\">\n",
         "</center>\n",
         "\n",
-        "Lo más sencillo es partir el interbalo $[a,b]$ por la mitad y preguntarnos ¿qué sucede con ese valor al ser evaluado bajo $f(x)$.\n",
+        "Lo más sencillo es partir el intervalo $[a,b]$ por la mitad y preguntarnos ¿qué sucede con ese valor al ser evaluado bajo $f(x)$.\n",
         "\n",
         "$$x_{1}=a+\\frac{b-a}{2}=\\frac{2a+b-a}{2}=\\frac{a+b}{2} \\tag{1}$$\n",
         "\n",
@@ -73,11 +73,9 @@
         "*   Si $f(a)*f(x_{n})<0$, entonces en el subintervalo $[a,x_{n}]$ se encuentra la raíz, renombrando $a=a$ y $b=x_{n}$.\n",
         "*   Si $f(a)*f(x_{n})>0$, entonces en el subintervalo $[x_{n},b]$ se encuentra la raíz, renombrando $a=x_{n}$ y $b=b$.\n",
         "\n",
-        "Después de un número suficiente de iteraciones, la aproximación $x_n$ es lo suficientemente cercana a la raźi de $f(x)$.\n",
+        "Después de un número suficiente de iteraciones, la aproximación $x_n$ es lo suficientemente cercana a la raíz de $f(x)$.\n",
         "\n",
-        "En nuestro caso (manejo de datos) a este algoritmo se le conoce como **Búsqueda Binaria** y es más sencillo que el algoritmo descrito previamente, ya que nos vamos a restringir a los $\\mathbb{N}$ ya que este campo es el que da orden a los datos y no tiene sentido tener valores negativos o racionales.\n",
-        "\n",
-        "Dado estos antecedentes procedemos a definir la función de recurrencia, para poder definir a que orden de complejidad pertenece este algoritmo **recursivo**."
+        "En nuestro caso (Manejo de Datos) a este algoritmo se le conoce como **Búsqueda Binaria** y es más sencillo que el algoritmo descrito previamente, en la mayoría de los cosas este algoritmo busca indices sobre los $\\mathbb{N}$ ya que este campo es el que da orden a los datos y no tiene sentido tener valores negativos o racionales, aunque este algoritmo puede ser aplicado sobre cualquier colección ordenada, sea cual sea el tipo de dato de la colección."
       ]
     },
     {
@@ -90,9 +88,18 @@
         "\n",
         "Como prerequisito este algoritmo requiere que la búsqueda debe realizarse sobre datos ordenados y es muy sencillo.\n",
         "\n",
-        "Sea $n$ la longitud de los datos en los cuales se realizara la búsqueda y dado que no tenemos índices negativos, lo primero es partir la longitd de la colección de datos a la mitad y preguntar si el dato que se busca se encuentra en esa localidad.\n",
+        "Sea $n$ la longitud de los datos en los cuales se realizara la búsqueda y dado que no tenemos índices negativos, lo primero es partir la longitud de la colección de datos a la mitad y preguntar si el dato que se busca se encuentra en esa localidad.\n",
         "\n",
-        "Si se encuentra ahi termina la búsqueda, en caso contrario se ajustan los limites de la búsqueda y se vuelve a realizar el mismo proceso hasta encontrar el dato."
+        "Si se encuentra ahí termina la búsqueda, en caso contrario se ajustan los limites de la búsqueda y se vuelve a realizar el mismo proceso hasta encontrar el dato.\n",
+        "\n",
+        "De manera más formal podemos describir el algoritmo de la siguiente forma.\n",
+        "\n",
+        "1.   Se recibe un dato a buscar y una colección de datos de longitud $n$, si $n < 1$ el algoritmo termina y se devuelve false.\n",
+        "2.   Se toma la longitud de la lista y se divide por la mitad (división entera), a este valor le decimos \"mitad\", si el contenido de la colección en la posición mitad es el dato a buscar, el algoritmo termina y devuelve true.\n",
+        "3.   Si el contenido de la colección en el indice mitad es menor que el dato a buscar, volvemos al paso 2 pero ahora con la colección desde el indice mitad y hasta el final de la misma.\n",
+        "4.   Si el contenido de la colección en el indice mitad es mayor que el dato a buscar, volvemos al paso 2 pero ahora con la colección desde el primer indice de la colección y hasta mitad.\n",
+        "5.   Si después de partir la colección suficientes veces se tiene una lista de longitud 0, entonces el dato nunca estuvo en la colección y se devuelve false.\n",
+        "\n"
       ]
     },
     {
@@ -101,7 +108,7 @@
         "id": "kg6_8TGwU3nw"
       },
       "source": [
-        "###Algoritmo Básico\n",
+        "# Pseudocódigo\n",
         "\n",
         "\n",
         "<center>\n",
@@ -121,7 +128,9 @@
         "\n",
         "Es importante recalcar que este algoritmo pide como requisito que los **elementos de la colección se encuentren ordenados**. Para el caso de una colección de tamaño 2 ó mayor, es necesario partir a la mitad dicha colección y preguntar si el elemento que se busca es mayor o menor al elemento que se encuentra a la mitad de la colección. Y dependiendo de la comparación se descarta una de las 2 mitades y se procede a buscar al elemento en la otra mitad.\n",
         "\n",
-        "Es por esto que buscar un elemento en una colección de tamaño $n$ tomará en total $T(\\frac{n}{2})+a$."
+        "Es por esto que buscar un elemento en una colección de tamaño $n$ tomará en total $T(\\frac{n}{2})+a$.\n",
+        "\n",
+        "Dado estos antecedentes procedemos a definir la función de recurrencia, para poder definir a que orden de complejidad pertenece este algoritmo **recursivo**."
       ]
     },
     {
