--- a/AlgoritmosBusqueda/02_BusquedaBinaria.ipynb
+++ b/AlgoritmosBusqueda/02_BusquedaBinaria.ipynb
@@ -112,7 +112,7 @@
         "\n",
         "\n",
         "<center>\n",
-        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/BBR.png?raw=1\" width=\"600\"> \n",
+        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/busBR.png?raw=1\" width=\"600\"> \n",
         "</center>\n"
       ]
     },
@@ -122,15 +122,13 @@
         "id": "Mz9tfZ-sUdsC"
       },
       "source": [
-        "### Análisis\n",
+        "## Análisis\n",
         "\n",
-        "Para el caso cuando se requiere buscar un elemento en una colección (lista) de tamaño 1 (o 0 caso trivial), basta con realizar a lo mas una comparación, lo cual toma tiempo constante, digamos $b$.\n",
+        "Para el caso cuando se requiere buscar un elemento en una colección (lista) de tamaño 1 (o 0 caso trivial), basta con realizar a lo más una comparación, lo cual toma tiempo constante, digamos $b$.\n",
         "\n",
-        "Es importante recalcar que este algoritmo pide como requisito que los **elementos de la colección se encuentren ordenados**. Para el caso de una colección de tamaño 2 ó mayor, es necesario partir a la mitad dicha colección y preguntar si el elemento que se busca es mayor o menor al elemento que se encuentra a la mitad de la colección. Y dependiendo de la comparación se descarta una de las 2 mitades y se procede a buscar al elemento en la otra mitad.\n",
+        "Es importante recalcar que este algoritmo pide como requisito que los **elementos de la colección se encuentren ordenados**. Para el caso de una colección de tamaño 2 ó mayor, es necesario partir a la mitad dicha colección y preguntar si el elemento se encuentra en la localidad de la mitad de la colección, en caso de no ser así es, es necesario verificar si el elemento que se busca es mayor o menor al elemento que se encuentra a la mitad de la colección. Y dependiendo de la comparación se descarta una de las 2 mitades y se procede a buscar al elemento en la otra mitad.\n",
         "\n",
-        "Es por esto que buscar un elemento en una colección de tamaño $n$ tomará en total $T(\\frac{n}{2})+a$.\n",
-        "\n",
-        "Dado estos antecedentes procedemos a definir la función de recurrencia, para poder definir a que orden de complejidad pertenece este algoritmo **recursivo**."
+        "Es por esto que buscar un elemento en una colección de tamaño $n$ tomará en total $T(\\frac{n}{2})+a$. Donde $a$ es el tiempo que le toma al dispositivo de cómputo realizar la comparación para saber si el elemento buscado se encuentra a la mitad de la colección."
       ]
     },
     {
@@ -139,11 +137,11 @@
         "id": "p9dw-XZfU9-d"
       },
       "source": [
-        "### ¿Qué sucede con colecciones de tamaño n?\n",
+        "## ¿Qué sucede con colecciones de tamaño $n$?\n",
         "\n",
         "Dado el análisis (y el pseudocódigo del algoritmo) podemos ver que buscar un dato en una colección de tamaño $n$ tomara $T(\\frac{n}{2})+a$. Pero este valor aún no permite identificar a que orden de complejidad pertenece este algoritmo.\n",
         "\n",
-        "Es por eso que necesitamos definir la función de recurrencia de la siguiente forma.\n",
+        "Es por eso que necesitamos definir la **función de recurrencia** de la siguiente forma.\n",
         "\n",
         "Función de recurrencia para el algoritmo de búsqueda binaria:\n",
         "\n",
@@ -159,7 +157,7 @@
         "id": "QYlAJsDnXYUX"
       },
       "source": [
-        "##**Demostración**\n",
+        "## Demostración\n",
         "\n",
         "Sea $T(n)$ el número de operaciones que le toma al algoritmo anterior buscar un dato en una lista de tamaño $n$ y dada la función de recurrencia. P.D. $T(n)=b+a*\\log_2 n$.\n",
         "\n",
@@ -172,7 +170,7 @@
         "id": "sIGxdX_5canB"
       },
       "source": [
-        "##**Orden de Complejidad (cota superior asintótica)**\n",
+        "## Orden de Complejidad (cota superior asintótica)\n",
         "\n",
         "Dada la demostración anterior, se puede concluir que $T(n)\\in O(\\log_{2}n)$, es decir que el orden de complejidad al cual pertenece el algoritmo Búsqueda Binaria es $\\log_{2}n$.\n",
         "\n",
@@ -184,19 +182,149 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xCkvM2gIybo2",
+        "outputId": "8230d545-1d98-4608-8893-4b923501a6b6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "'''\n",
+        "Funcion que implementa de manera ingenua la busqueda binaria\n",
+        "coleccion: coleccion de datos ordenada sobre la cual se buscara\n",
+        "dato: dato a buscar en la coleccion\n",
+        "'''\n",
+        "def busquedaBinariaIngenua(coleccion, dato):\n",
+        "  # si la lista es vacia.\n",
+        "  if len(coleccion) < 1:\n",
+        "    # se devuelve False.\n",
+        "    return False\n",
+        "  # division entera de la mitad de la coleccion.\n",
+        "  mitad = len(coleccion)//2\n",
+        "  # si el valor en la posicion de en medio es igual al valor buscado.\n",
+        "  if coleccion[mitad] == dato:\n",
+        "    # se regresa la posicion de en medio.\n",
+        "    return mitad\n",
+        "  # si el valor en la posicion de en medio es menor al valor buscado.\n",
+        "  if coleccion[mitad] < dato:\n",
+        "    # se realiza la llamada recursiva.\n",
+        "    # utiliza la sublista que va desde la posicion de en medio hasta la ultima posicion.\n",
+        "    return busquedaBinariaIngenua(coleccion[mitad:], dato)\n",
+        "  # si el valor en la posicion de en medio es mayor al valor buscado.\n",
+        "  else:\n",
+        "    # se realiza la llamada recursiva.\n",
+        "    # utiliza la sublista que va desde la primera posicion hasta la posicion de en medio.\n",
+        "    return busquedaBinariaIngenua(coleccion[:mitad], dato)\n",
+        "\n",
+        "col = [1, 5, 7, 9, 11, 15]\n",
+        "dato = 5\n",
+        "#dato = 15\n",
+        "\n",
+        "# pruebas de la funcion\n",
+        "print(busquedaBinariaIngenua(col, 15))"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "x4SdFoYqyf0r"
+      },
+      "source": [
+        "Al parecer todo funciona bien con este algoritmo, ¿verdad?.\n",
+        "\n",
+        "¿Qué sucede si se buscan elementos en la parte derecha de la mitad de la lista?.\n",
+        "\n",
+        "¿Por qué sucede esto?."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jsm65BhA0R3w",
+        "outputId": "6f329ac9-7135-4f69-ffe2-0edcbc32faea",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "'''\n",
+        "Funcion que implementa de manera ingenua la busqueda binaria\n",
+        "coleccion: coleccion de datos ordenada sobre la cual se buscara\n",
+        "dato: dato a buscar en la coleccion\n",
+        "i: indice izquierdo para realizar ajuste de limites\n",
+        "i: indice derecho para realizar ajuste de limites\n",
+        "'''\n",
+        "def busquedaBinariaR(coleccion, dato, i, d):\n",
+        "    # si se cruzan los indices significa que el dato no se encontro\n",
+        "    if d < i:\n",
+        "        return False\n",
+        "    # encuentra la mitad del respectivo intervalo de busqueda\n",
+        "    mitad = i + ((d-i)//2)\n",
+        "    #Si el valor en la posicion de en medio es igual al valor buscado.\n",
+        "    if coleccion[mitad] == dato:\n",
+        "        # se devuelve el indice\n",
+        "        return mitad\n",
+        "    #Si el valor en la posicion de en medio es menor al valor buscado.\n",
+        "    if coleccion[mitad] < dato:\n",
+        "        # utiliza como indices la variable mitad y el limite derecho.\n",
+        "        return busquedaBinariaR(coleccion, dato, mitad, d)\n",
+        "    #Si el valor en la posicion de en medio es mayor al valor buscado.\n",
+        "    else:\n",
+        "        # utiliza como indices la primera posicion y la variable mitad.\n",
+        "        return busquedaBinariaR(coleccion, dato, i, mitad)\n",
+        "\n",
+        "col = [1, 5, 7, 9, 11, 15]\n",
+        "#dato = 5\n",
+        "dato = 15\n",
+        "\n",
+        "# pruebas de la funcion\n",
+        "print(busquedaBinariaR(col, dato, 0, len(col)))"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "LPYEpus25dEn"
+      },
+      "source": [
+        "Al parecer la segunda versión (`busquedaBinariaR`) ya funciona de manera correcta (realiza las pruebas), sin embargo volvemos a realizar búsquedas sobre valores numéricos.\n",
+        "\n",
+        "**¿Qué se necesita hacer para realizar búsquedas sobre cualquier tipo de objeto?**."
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "hiNbT80EdmCW"
       },
       "source": [
-        "### Referencias\n",
+        "# Referencias\n",
         "\n",
         "* Thomas H. Cormen: Introduction to Algorithms.\n",
-        "\n",
         "* Referencias Libro Web: Introduccion a Python.\n",
-        "\n",
         "* Referencias Daniel T. Joyce: Object-Oriented Data Structures.\n",
-        "\n",
         "* Referencias John C. Mitchell: Concepts in programing Languages."
       ]
     }
