Creado mediante Colaboratory

--- a/AlgoritmosBusqueda/01_BusquedaSecuencial.ipynb
+++ b/AlgoritmosBusqueda/01_BusquedaSecuencial.ipynb
@@ -157,7 +157,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b6589842-64fe-4378-cdae-86e61f49e344"
+        "outputId": "d4b6f341-7ec5-4b0f-ab31-a83b82743969"
       },
       "source": [
         "''' \n",
@@ -179,7 +179,7 @@
         "#valor = 105\n",
         "print(b_secuencial(col, valor))"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -257,9 +257,10 @@
       "metadata": {
         "id": "8_DjsTdijvDp",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 269
         },
-        "outputId": "8e941bc4-5071-4d03-faae-90e626ced552"
+        "outputId": "6697b253-369b-43fd-d659-63b003e56514"
       },
       "source": [
         "# Clase para generar objetos de tipo alumno\n",
@@ -305,20 +306,32 @@
         "print(Mike.promedio())\n",
         "print(Aitor.promedio())\n",
         "\n",
+        "# Prueba de comparacion DESCOMENTAR PARA VER ERROR\n",
+        "#print(Mike <= Aitor)\n",
+        "\n",
         "# Prueba del metodo iguales\n",
         "print(Mike.iguales(Aitor))\n",
         "print(Mike.iguales(Mike))"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "9.8\n",
-            "9.2\n",
-            "False\n",
-            "True\n"
+            "9.2\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-10-0eb20c9f21df>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     43\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     44\u001b[0m \u001b[0;31m# Prueba de comparacion\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 45\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mMike\u001b[0m \u001b[0;34m<=\u001b[0m \u001b[0mAitor\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     46\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     47\u001b[0m \u001b[0;31m# Prueba del metodo iguales\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mTypeError\u001b[0m: '<=' not supported between instances of 'AlumnoFC' and 'AlumnoFC'"
           ]
         }
       ]
@@ -353,7 +366,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e346037e-d809-4ca6-d022-f1bdf7d03ffb"
+        "outputId": "8dcfaec3-c0ef-4b7e-d845-504d3e72b9dc"
       },
       "source": [
         "# Clase para generar objetos de tipo alumno\n",
@@ -396,20 +409,28 @@
         "Aitor = AlumnoFC('Aitor', 20134563, [8, 10, 9, 9, 10])\n",
         "Pete = AlumnoFC('Peter', 110134563, [9, 8, 8, 9, 10])\n",
         "\n",
+        "# Prueba de operadores\n",
+        "print(Mike == Mike)\n",
+        "print(Mike <= Aitor)\n",
+        "print(Pete >= Mike)\n",
+        "\n",
         "# Coleccion de alumnos \n",
         "alumnos = [Mike, Aitor, Pete]\n",
         "# Alumno a buscar\n",
-        "alumno = 30134563\n",
+        "dato = AlumnoFC('Peter', 110134563, [9, 8, 8, 9, 10])\n",
         "\n",
-        "print(b_secuencial(alumnos, Pete))\n",
+        "print(b_secuencial(alumnos, dato))\n",
         "\n"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "True\n",
+            "False\n",
+            "True\n",
             "2\n"
           ]
         }
