Creado mediante Colaboratory

--- a/AlgoritmosBusqueda/02_BusquedaBinaria.ipynb
+++ b/AlgoritmosBusqueda/02_BusquedaBinaria.ipynb
@@ -75,7 +75,7 @@
         "\n",
         "Después de un número suficiente de iteraciones, la aproximación $x_n$ es lo suficientemente cercana a la raíz de $f(x)$.\n",
         "\n",
-        "En nuestro caso (Manejo de Datos) a este algoritmo se le conoce como **Búsqueda Binaria** y es más sencillo que el algoritmo descrito previamente, en la mayoría de los cosas este algoritmo busca indices sobre los $\\mathbb{N}$ ya que este campo es el que da orden a los datos y no tiene sentido tener valores negativos o racionales, aunque este algoritmo puede ser aplicado sobre cualquier colección ordenada, sea cual sea el tipo de dato de la colección."
+        "En nuestro caso (Manejo de Datos) a este algoritmo se le conoce como **Búsqueda Binaria** y es más sencillo que el algoritmo descrito previamente, en la mayoría de los casos este algoritmo busca índices sobre los $\\mathbb{N}$ ya que este campo es el que da orden a los datos y no tiene sentido tener valores negativos o racionales, aunque este algoritmo puede ser aplicado sobre cualquier colección ordenada, sea cual sea el tipo de dato de la colección."
       ]
     },
     {
@@ -86,19 +86,19 @@
       "source": [
         "# Descipición del agoritmo\n",
         "\n",
-        "Como prerequisito este algoritmo requiere que la búsqueda debe realizarse sobre datos ordenados y es muy sencillo.\n",
+        "Como prerequisito este algoritmo requiere que la búsqueda debe realizarse sobre **datos ordenados** y es muy sencillo.\n",
         "\n",
-        "Sea $n$ la longitud de los datos en los cuales se realizara la búsqueda y dado que no tenemos índices negativos, lo primero es partir la longitud de la colección de datos a la mitad y preguntar si el dato que se busca se encuentra en esa localidad.\n",
+        "Sea $n$ la longitud de la colección de datos sobre los cuales se realizará la búsqueda, lo primero es partir la longitud de la colección de datos a la mitad y preguntar si el dato que se busca se encuentra en ese índice o localidad.\n",
         "\n",
         "Si se encuentra ahí termina la búsqueda, en caso contrario se ajustan los limites de la búsqueda y se vuelve a realizar el mismo proceso hasta encontrar el dato.\n",
         "\n",
         "De manera más formal podemos describir el algoritmo de la siguiente forma.\n",
         "\n",
-        "1.   Se recibe un dato a buscar y una colección de datos de longitud $n$, si $n < 1$ el algoritmo termina y se devuelve false.\n",
-        "2.   Se toma la longitud de la lista y se divide por la mitad (división entera), a este valor le decimos \"mitad\", si el contenido de la colección en la posición mitad es el dato a buscar, el algoritmo termina y devuelve true.\n",
-        "3.   Si el contenido de la colección en el indice mitad es menor que el dato a buscar, volvemos al paso 2 pero ahora con la colección desde el indice mitad y hasta el final de la misma.\n",
-        "4.   Si el contenido de la colección en el indice mitad es mayor que el dato a buscar, volvemos al paso 2 pero ahora con la colección desde el primer indice de la colección y hasta mitad.\n",
-        "5.   Si después de partir la colección suficientes veces se tiene una lista de longitud 0, entonces el dato nunca estuvo en la colección y se devuelve false.\n",
+        "1.   Se recibe un dato a buscar y una colección de datos de longitud $n$, si $n < 1$ el algoritmo termina y se devuelve `False`.\n",
+        "2.   Se toma la longitud de la lista y se divide por la mitad (división entera), a este valor le decimos \"mitad\", si el contenido de la colección en la posición mitad es el dato a buscar, el algoritmo termina y devuelve `True`.\n",
+        "3.   Si el contenido de la colección en el índice mitad es menor que el dato a buscar, volvemos al paso 2 pero ahora con la colección desde el índice mitad y hasta el final de la misma.\n",
+        "4.   Si el contenido de la colección en el índice mitad es mayor que el dato a buscar, volvemos al paso 2 pero ahora con la colección desde el primer índice de la colección y hasta mitad.\n",
+        "5.   Si después de partir la colección suficientes veces se tiene una lista de longitud 0, entonces el dato nunca estuvo en la colección y se devuelve `False`, lo que significa que el dato a buscar no pertenece a la colección.\n",
         "\n"
       ]
     },
@@ -185,10 +185,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "xCkvM2gIybo2",
-        "outputId": "8230d545-1d98-4608-8893-4b923501a6b6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "8230d545-1d98-4608-8893-4b923501a6b6"
       },
       "source": [
         "'''\n",
@@ -225,7 +225,7 @@
         "# pruebas de la funcion\n",
         "print(busquedaBinariaIngenua(col, 15))"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -253,52 +253,50 @@
       "cell_type": "code",
       "metadata": {
         "id": "jsm65BhA0R3w",
-        "outputId": "6f329ac9-7135-4f69-ffe2-0edcbc32faea",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "502647f4-9290-45ce-e71a-a1d920ecef40"
       },
       "source": [
         "'''\n",
         "Funcion que implementa de manera ingenua la busqueda binaria\n",
         "coleccion: coleccion de datos ordenada sobre la cual se buscara\n",
         "dato: dato a buscar en la coleccion\n",
-        "i: indice izquierdo para realizar ajuste de limites\n",
-        "i: indice derecho para realizar ajuste de limites\n",
+        "inicio: indice izquierdo para realizar ajuste de limites\n",
+        "final: indice derecho para realizar ajuste de limites\n",
         "'''\n",
-        "def busquedaBinariaR(coleccion, dato, i, d):\n",
-        "    # si se cruzan los indices significa que el dato no se encontro\n",
-        "    if d < i:\n",
-        "        return False\n",
-        "    # encuentra la mitad del respectivo intervalo de busqueda\n",
-        "    mitad = i + ((d-i)//2)\n",
-        "    #Si el valor en la posicion de en medio es igual al valor buscado.\n",
-        "    if coleccion[mitad] == dato:\n",
-        "        # se devuelve el indice\n",
-        "        return mitad\n",
-        "    #Si el valor en la posicion de en medio es menor al valor buscado.\n",
-        "    if coleccion[mitad] < dato:\n",
-        "        # utiliza como indices la variable mitad y el limite derecho.\n",
-        "        return busquedaBinariaR(coleccion, dato, mitad, d)\n",
-        "    #Si el valor en la posicion de en medio es mayor al valor buscado.\n",
-        "    else:\n",
-        "        # utiliza como indices la primera posicion y la variable mitad.\n",
-        "        return busquedaBinariaR(coleccion, dato, i, mitad)\n",
+        "def busquedaBinariaR(lista, dato, inicio, final):\n",
+        "  # caso base\n",
+        "  if final < inicio:\n",
+        "    return False\n",
+        "  # buscamos a la mitad OJO\n",
+        "  # mitad = inicio + ((final - inicio) // 2)\n",
+        "  mitad = (inicio + final) // 2\n",
+        "  # caso base\n",
+        "  if lista[mitad] == dato:\n",
+        "    return True\n",
+        "  if dato < lista[mitad]:\n",
+        "    #llamada recursiva\n",
+        "    return busquedaBinariaR(lista, dato, inicio, mitad-1)\n",
+        "  else:\n",
+        "    #llamada recursiva\n",
+        "    return busquedaBinariaR(lista, dato, mitad+1, final)\n",
         "\n",
         "col = [1, 5, 7, 9, 11, 15]\n",
         "#dato = 5\n",
         "dato = 15\n",
         "\n",
         "# pruebas de la funcion\n",
-        "print(busquedaBinariaR(col, dato, 0, len(col)))"
+        "print(busquedaBinariaR(col, dato, 0, len(col)-1))"
       ],
-      "execution_count": 8,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "5\n"
+            "True\n"
           ]
         }
       ]
@@ -312,6 +310,233 @@
         "Al parecer la segunda versión (`busquedaBinariaR`) ya funciona de manera correcta (realiza las pruebas), sin embargo volvemos a realizar búsquedas sobre valores numéricos.\n",
         "\n",
         "**¿Qué se necesita hacer para realizar búsquedas sobre cualquier tipo de objeto?**."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Xoi4nC_xUvXn"
+      },
+      "source": [
+        "# POO\n",
+        "\n",
+        "Volviendo al Paradigma Orientado a Objetos, veamos una implementación un poco más robusta de la clase `AlumnoFC`, que defina los comportamientos necesarios para poder aplicar el algoritmo de la Búsqueda Binaria, sobre objetos de tipo `AlumnoFC`.\n",
+        "\n",
+        "[Aquí](https://medium.com/@LuisMBaezCo/overloading-sobrecargar-operadores-en-python-5d7a75e2bfdf) puedes ver una lista un poco más extensa y detallada de los posibles operadores que pueden ser sobrecargados."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "eIjchSbjfvXR"
+      },
+      "source": [
+        "# Clase para generar objetos de tipo alumno\n",
+        "class AlumnoFC(object):\n",
+        "\n",
+        "  # Constructor de alumnos\n",
+        "  def __init__(self, nombre, numero_cuenta, calif):\n",
+        "    self.nombre = nombre\n",
+        "    self.numero_cuenta = numero_cuenta\n",
+        "    self.calificaciones = calif\n",
+        "\n",
+        "  # Sobrecarga de los operadores de comparación\n",
+        "  # Determina si un alumno es igual a otro\n",
+        "  def __eq__(self, otro):\n",
+        "    if self.numero_cuenta == otro.numero_cuenta:\n",
+        "      return True\n",
+        "    else:\n",
+        "      return False\n",
+        "\n",
+        "  # Indica si un alumnos es mayor o igual a otro\n",
+        "  def __ge__(self, otro):\n",
+        "    if self.numero_cuenta >= otro.numero_cuenta:\n",
+        "      return True\n",
+        "    else:\n",
+        "      return False\n",
+        "\n",
+        "  # Indica si un alumnos es menor o igual a otro\n",
+        "  def __le__(self, otro):\n",
+        "    if self.numero_cuenta <= otro.numero_cuenta:\n",
+        "      return True\n",
+        "    else:\n",
+        "      return False\n",
+        "\n",
+        "  # Indica si un alumnos es mayor a otro\n",
+        "  def __gt__(self, otro):\n",
+        "    if self.numero_cuenta > otro.numero_cuenta:\n",
+        "      return True\n",
+        "    else:\n",
+        "      return False\n",
+        "\n",
+        "  # Indica si un alumnos es menor a otro\n",
+        "  def __lt__(self, otro):\n",
+        "    if self.numero_cuenta < otro.numero_cuenta:\n",
+        "      return True\n",
+        "    else:\n",
+        "      return False\n",
+        "\n",
+        "  # Sobrecarga del operador que imprime objetos de tipo alumno\n",
+        "  def __str__(self):\n",
+        "    return self.nombre\n",
+        "  \n",
+        "  # Devuelve el promedio de las calificaciones de un alumno\n",
+        "  def promedio(self):\n",
+        "    promedio = sum(self.calificaciones)/len(self.calificaciones)\n",
+        "    return promedio"
+      ],
+      "execution_count": 36,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7A-8pG8wWIZA"
+      },
+      "source": [
+        "## Datos Ordenados\n",
+        "\n",
+        "En caso de que los datos no se encuentren ordenados, **podemos hacer uso de alguno de los algoritmos de ordenamiento vistos previamente** para ordenar la colección de datos y una vez ordenados entonces procedemos a realizar la búsqueda."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "05-w3hVzWhbm"
+      },
+      "source": [
+        "# Definicion recursiva de quicksort\n",
+        "def quickSort(lista):\n",
+        "  # si la lista es de tamano 1 o menor se devuelve\n",
+        "  if len(lista) < 2:\n",
+        "    return lista\n",
+        "  # en otro caso se parte la lista y se resuelve recursivamente\n",
+        "  else:\n",
+        "    # se parte la lista original (n operaciones)\n",
+        "    menores, pivote, mayores = particion(lista) \n",
+        "    # 2*T(n/2)\n",
+        "    return quickSort(menores)+[pivote]+quickSort(mayores)\n",
+        "\n",
+        "# Definicion del algoritmo para partir una lista en mayores y menores\n",
+        "def particion(lista):\n",
+        "  mayores, menores = [], []\n",
+        "  # pivote para realizar la comparación\n",
+        "  pivote = lista[0]\n",
+        "  for i in range(1,len(lista)):\n",
+        "    if lista[i] < pivote:\n",
+        "      menores.append(lista[i])\n",
+        "    else:\n",
+        "      mayores.append(lista[i])\n",
+        "  # se devuelven ambas listas y el pivote\n",
+        "  return menores, pivote, mayores"
+      ],
+      "execution_count": 37,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "iy2JpTjQWvSu"
+      },
+      "source": [
+        "En la siguiente celda celda de código se muestra una colección de datos que no esta ordenada (respecto al número de cuenta), sin embargo una vez que se aplica *QuickSort* a la colección, esta queda ordenada y lista para poder realizar las búsquedas necesarias en un menor tiempo."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zpJLbhqsXTbx",
+        "outputId": "5c33c1b2-49cd-43b8-971a-aa3d693c8ff5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Pruebas con la clase AlumnosFC\n",
+        "Mike = AlumnoFC('Mike', 30134563, [10, 10, 10, 9, 10])\n",
+        "Aitor = AlumnoFC('Aitor', 20134563, [8, 10, 9, 9, 10])\n",
+        "Pete = AlumnoFC('Peter', 10134563, [9, 8, 8, 9, 10])\n",
+        "\n",
+        "# Coleccion de alumnos \n",
+        "alumnos = [Mike, Aitor, Pete]\n",
+        "\n",
+        "# FOREACH\n",
+        "print(\"Alumnos desordenados\")\n",
+        "for alumno in alumnos:\n",
+        "  print(alumno)\n",
+        "\n",
+        "# Prueba de QuickSort (sobrecargado)\n",
+        "alumnosOrdenados = quickSort(alumnos)\n",
+        "\n",
+        "# FOREACH\n",
+        "print(\"Alumnos Ordenados\")\n",
+        "for alumno in alumnosOrdenados:\n",
+        "  print(alumno)\n",
+        "\n",
+        "# Una vez ordenada la lista podemos aplicar BusquedaBinara\n",
+        "dato = AlumnoFC('Peter', 10134563, [9, 8, 8, 9, 10])\n",
+        "\n",
+        "# Se busca desde el indice cero hasta el ultimo elemento de la coleccion\n",
+        "print(\"¿Se ecuentra el dato en la coleccion?\")\n",
+        "print(busquedaBinariaR(alumnosOrdenados, dato, 0, len(alumnosOrdenados)-1))\n"
+      ],
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Alumnos desordenados\n",
+            "Mike\n",
+            "Aitor\n",
+            "Peter\n",
+            "Alumnos Ordenados\n",
+            "Peter\n",
+            "Aitor\n",
+            "Mike\n",
+            "¿Se ecuentra el dato en la coleccion?\n",
+            "True\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "p-Tay_ESkomP"
+      },
+      "source": [
+        "# Búsqueda Secuencial v.s. Búsqueda Binaria\n",
+        "\n",
+        "Ya que conocemos ambos algoritmos de búsqueda, que podemos decir al respecto de ambos, ¿cuál es mejor?, bueno como siempre la respuesta a esta pregunta debe ser ¿mejor en cuanto a que y en qué situación?."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "DFUf_IGfl5TP"
+      },
+      "source": [
+        "## Búsqueda Secuencial\n",
+        "\n",
+        "En caso de tener que realizar una única búsqueda sobre una colección de datos desordenada, lo ideal (menos costoso) es realizar la búsqueda secuencial (de preferencia en su versión iterativa), ya que este algoritmo pertenece al orden de complejidad $O(n)$ y no requiere que los datos se encuentren ordenados."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "pQcXhJf6mFXm"
+      },
+      "source": [
+        "## Búsqueda Binaria\n",
+        "\n",
+        "Por otro lado si se requiere realizar múltiples búsquedas (a mayor cantidad de búsquedas mejor) en una colección desordenada, lo mejor es ordenar la colección mediante alguno de los algoritmos de ordenamiento vistos previamente y posteriormente realizar la búsqueda binaria.\n",
+        "\n",
+        "En este caso el orden de complejidad del algoritmo completo $(ordenamiento + búsqueda binaria)$ sería $O(n*\\log_{2}n) + O(\\log_{2}n)$ en caso de usar un algoritmo de ordenamiento como *QuickSort* o *MergeSort* y sería $O(k*n) + O(\\log_{2}n)$ en caso de usar *RadixSort*.\n",
+        "\n",
+        "Es importante notar, que a mayor número de búsquedas (una vez que los datos ya fueron ordenados) el beneficio es mayor ya que las subsiguientes búsquedas solo tomarían un tiempo proporcional a $O(\\log_{2}n)$.\n",
+        "\n",
+        "Este tipo de estrategias son las que **se aplican sobre las bases de datos**, primero conviene ordenar los datos y posteriormente realizar las búsquedas necesarias sobre la colección de datos."
       ]
     },
     {
