Creado mediante Colaboratory

--- a/AlgoritmosBusqueda/03_BusquedaDePatrones.ipynb
+++ b/AlgoritmosBusqueda/03_BusquedaDePatrones.ipynb
@@ -33,13 +33,15 @@
         "id": "ttiAbrCciXZ7"
       },
       "source": [
-        "# **Expresiones Regulares**\n",
-        "\n",
-        "Profesor: M. en C. Miguel Angel Pérez León\n",
-        "\n",
-        "Ayudante: Jesús Iván Coss Calderón\n",
-        "\n",
-        "Materia: Manejo de Datos"
+        "<font color=\"Teal\" face=\"Comic Sans MS,arial\">\n",
+        "  <h1 align=\"center\"><i>Búsqueda de Patrones</i></h1>\n",
+        "  </font>\n",
+        "  <font color=\"Black\" face=\"Comic Sans MS,arial\">\n",
+        "  <h5 align=\"center\"><i>Profesor: M.en.C. Miguel Angel Pérez León</i></h5>\n",
+        "  <h5 align=\"center\"><i>Ayudante: Jesús Iván Coss Calderón</i></h5>\n",
+        "  <h5 align=\"center\"><i>Ayudante: Jonathan Ramírez Montes</i></h5>\n",
+        "  <h5 align=\"center\"><i>Materia: Manejo de Datos</i></h5>\n",
+        "  </font>"
       ]
     },
     {
@@ -48,26 +50,40 @@
         "id": "cwIfAuioiyPS"
       },
       "source": [
-        "## **Introducción**\n",
+        "## Introducción\n",
         "\n",
         "Dentro de las áreas que abarca el estudio de las ciencias es bien conocido que regularmente es necesario identificar secuencias, formas, cadenas, etc. que se repiten frecuentemente, a estas 'formas' que se repiten frecuentemente se les conocen como **patrones**.\n",
         "\n",
         "Por ejemplo, para un biólogo que analiza la **cadena de adn** de un individuo conformada por las letras (GTAC) le interesa identificar patrones que pueden determinar su genotipo. O por ejemplo para un investigador que quiere determinar cual es **la ruta mas transitada** dentro de Ciudad Universitaria, le interesa identificar el patrón que determinar este trayecto. \n",
         "\n",
-        "Para alguien que labore en el are de minería de datos, es de vital importancia identificar patrones dentro de las bases de datos. Con la información adquirida identificando los patrones de un determinado usuario, se le puede **mostrar publicidad que encaje con sus patrones** para que este usuario realice compras."
+        "Para alguien que labore en el are de minería de datos, es de vital importancia identificar patrones dentro de las bases de datos. Con la información adquirida identificando los patrones de un determinado usuario, se le puede **mostrar publicidad que encaje con sus patrones** para que este usuario realice compras.\n",
+        "\n",
+        "Para un estudiante de actuaria seria muy atractivo identificar patrones dentro de las **bases estadísticas** (INEGI) y con base en estos datos ajustar las tasas que emplea una determinada empresa para los costos de sus productos.\n",
+        "\n",
+        "Recientemente también se ha descubierto que el **comportamiento de la bolsa de valores** es repetitivo, por lo que encontrar un patrón en este sentido da una gran ventaja al que posea dicha información. \n",
+        "\n",
+        "Para identificar los patrones antes mencionados existen muchas técnicas y herramientas, por ejemplo las herramientas que nos proporciona un **procesador de textos** (word) o también los **navegadores de internet** y finalmente tenemos a las **expresiones regulares**. De todo esto hablaremos en las siguientes secciones."
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "yyVGUUm5jSYy"
+        "id": "p719FsTRp8gH"
       },
       "source": [
-        "Para un estudiante de actuaria seria muy atractivo identificar patrones dentro de las **bases estadísticas** (INEGI) y con base en estos datos ajustar las tasas que emplea una determinada empresa para los costos de sus productos.\n",
+        "# Búsqueda de Patrones\n",
         "\n",
-        "Recientemente también se ha descubierto que el **comportamiento de la bolsa de valores** es repetitivo, por lo que encontrar un patrón en este sentido da una gran ventaja al que posea dicha información. \n",
+        "La búsqueda y reconocimiento de patrones es muy útil en muchos de los campos de las ciencias, recientemente una de las aplicaciones que se le ha dado al reconocimiento de patrones tiene que ver con la inteligencia artificial y en particular con las redes **neuronales artificiales**.\n",
         "\n",
-        "Para identificar los patrones antes mencionados existen muchas técnicas y herramientas, pero una de las que mas se usa son las **expresiones regulares**."
+        "Podemos pensar en una red neuronal artificial como una caja negra que es entrenada con un conjunto de datos y mediante técnicas como el **descenso del gradiente** y la **retropropagación** la red comienza a \"aprender\" e **identificar patrones** que logran predecir o clasificar un comportamiento dado.\n",
+        "\n",
+        "Si quieres conocer un poco más sobre redes neuronales artificiales te recomiendo este par de canales de youtube:\n",
+        "\n",
+        "*   [3Blue1Brown](https://www.youtube.com/playlist?list=PLo8YL3HL50lUHQS80oE_ypxFi0Y3uCVal): lista de videos sobre redes neuronales.\n",
+        "*   [DotCSV](https://www.youtube.com/watch?v=MRIv2IwFTPg&list=PL-Ogd76BhmcB9OjPucsnc2-piEE96jJDQ): canal sobre inteligencia artificial y tecnología.\n",
+        "\n",
+        "En este documento vamos a comenzar a identificar las herramientas que tenemos disponibles (como seres humanos) para la búsqueda de patrones.\n",
+        "\n"
       ]
     },
     {
@@ -76,7 +92,40 @@
         "id": "abakh1vVkOK0"
       },
       "source": [
-        "## **Expresiones Regulares (RegEx)**"
+        "## Procesadores de Textos\n",
+        "\n",
+        "La gran mayoría (si no es que todos) de los procesadores de texto como:\n",
+        "\n",
+        "*   Word.\n",
+        "*   Oppen Office.\n",
+        "*   Google Docs.\n",
+        "*   Lyx.\n",
+        "*   Overleaf.\n",
+        "\n",
+        "O incluso editores de código como:\n",
+        "\n",
+        "*   Eclipse.\n",
+        "*   NetBeans.\n",
+        "*   NotePad++.\n",
+        "*   Atom.\n",
+        "*   InteliJ.\n",
+        "\n",
+        "\n",
+        "Cuentan con herramientas que nos permiten realizar búsquedas dentro de los archivos que estemos manejando.\n",
+        "\n",
+        "Estas herramientas de búsqueda van de búsquedas tan sencillas, como lo puede ser la búsqueda de una determinada palabra dentro de los documentos, hasta un identificar un patrón y reemplazarlo.\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "dbw2YTefsrov"
+      },
+      "source": [
+        "## Buscadores de Internet\n",
+        "\n",
+        "De igual manera, los buscadores de internet nos proporcionan herramientas para identificar patrones dentro de nuestra búsquedas o incluso para investigar el código *HTML* que conforma un sitio web."
       ]
     },
     {
@@ -85,7 +134,7 @@
         "id": "M8XWKGZDkYsG"
       },
       "source": [
-        "### Características\n",
+        "## Expresiones Regulares (*RegEx*)\n",
         "\n",
         "La búsqueda de patrones dentro de un conjunto de datos, es una un tanto sencilla para el cerebro humano ya que este ha gozado de miles de años de evolución para adaptarse a esta labor. Sin embargo hacer que una computadora pueda identificar patrones de igual manera que lo hace el cerebro humano no es una labor trivial. \n",
         "\n",
